# Populace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/api/: __init__.py  achievements.py  director.py  quests.py  report.py  residents.py  saves.py  schemas.py  settings.py  simulation.py  world.py  ws.py
backend/core/: clock.py  config.py  simulation.py
backend/db/: __init__.py  neo4j.py  redis.py
backend/llm/: __init__.py  client.py  prompts.py  token_budget.py
backend/world/: __init__.py  buildings.py  events.py  town.py
engine/: README.md  __init__.py  act.py  agent.py  diary.py  generative_agent.py  gossip.py  memory.py  pathfinding.py  plan.py  pyproject.toml  reflect.py  relationship_events.py  schedule.py  setup.py  social.py  types.py  world.py
engine/examples/: __init__.py  demo.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/.claude/: ralph-loop.local.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: graph-renderer-helpers.test.mjs  simulation-replay-history.test.mjs
scripts/: smoke_test.py
tests/: conftest.py  test_social_relationships.py
tests/test_backend/: test_api_docs_and_validation.py  test_diary_api.py  test_director_api.py  test_energy_season.py  test_health.py  test_llm_client.py  test_memoir_timeline.py  test_mood_network_api.py  (+12 more)
(+113 files in other folders)
